--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       --primary: #2563eb;
       --primary-soft: #dbeafe;
       --accent: #10b981;
-      --bg: #0f172a;
-      --card: #0b1120;
+      --bg: #020617;
+      --card: #020617;
       --text-main: #f9fafb;
       --text-muted: #9ca3af;
       --border-subtle: #1f2937;
